# Boletin2

./: 12.c  13.c  14.c  15.c  16.c  17.c  19.c  2.c  22.c  23.c  24.c  25.c  26.c  27.c  28.c  29.c  3.c  30.c  31.c  32.c  40.c  41.c  44.c  45.c  CMakeLists.txt  W1.c  p.c
