cmake_minimum_required(VERSION 3.29)
project(Boletin2 C)

set(CMAKE_C_STANDARD 11)

add_executable(Ejercicio2 2.c)
add_executable(Ejercicio3 3.c)
add_executable(Ejercicio12 12.c)
add_executable(Ejercicio13 13.c)
add_executable(Ejercicio14 14.c)
add_executable(Ejercicio15 15.c)
add_executable(Ejercicio16 16.c)
add_executable(Ejercicio17 17.c)
add_executable(Ejercicio19 19.c)
add_executable(Ejercicio22 22.c)
add_executable(Ejercicio23 23.c)
add_executable(Ejercicio24 24.c)
add_executable(Ejercicio25 25.c)
add_executable(Ejercicio26 26.c)
add_executable(Ejercicio27 27.c)
add_executable(Ejercicio28 28.c)
add_executable(Ejercicio29 29.c)
add_executable(Ejercicio30 30.c)
add_executable(Ejercicio31 31.c)
add_executable(Ejercicio32 32.c)
add_executable(Wuolah1 W1.c)
add_executable(prueba p.c)
add_executable(Ejercicio41 41.c)
add_executable(Ejercicio40 40.c)
add_executable(Ejercicio44 44.c)
add_executable(Ejercico45 45.c)
add_executable(Ejercicio46 cmake-build-debug/46.c)
